fix: 修复Java11兼容与防重放指令幂等边界缺陷
1. 基线计算Stream.toList()改为Collectors收集，编译锁定release=11，JDK11运行验证通过
2. nonce有效期改为覆盖消息最晚可接受时刻，补设备时钟超前/临界过期/并发重放3项测试
3. 指令幂等拦截覆盖终态，稳定达标改为双连续遥测点带采样间隔语义，补4项测试